# AI_Research_Intelligence_System

./: .dockerignore  .env.example  .gitignore  .ruffignore  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  IMMEDIATE_FIX.txt  QUICK_DEPLOY.md  README.md  SECURITY.md  STREAMLIT_CLOUD_FIX.md  UNIVERSAL_TRUTH_FILTER.md  docker-compose.yml  packages.txt  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements-streamlit-cloud.txt  requirements.txt  test_apis.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
api_integrations/: arxiv_client.py  crossref_client.py  language_tool_client.py  openai_client.py  semantic_scholar_client.py  wikipedia_client.py
app/: config.py  dashboard.py  main.py
app/pages/: history.py  reports.py  sentence_analysis.py  settings.py
data/: common_knowledge.json
guidance_engine/: citation_guidance.py  improvement_path.py  plagiarism_guidance.py  structure_guidance.py  tone_guidance.py
plagiarism_engine/: rabin_karp.py  semantic_engine.py  tfidf_engine.py  universal_truth_filter.py
quality_analyzer/: api_based_scoring_engine.py  citation_checker.py  readability.py  scoring_engine.py  structure_analyzer.py  tone_checker.py
tests/: __init__.py  conftest.py
tests/test_plagiarism_engine/: test_rabin_karp.py
tests/test_utils/: test_preprocessing.py
utils/: exceptions.py  file_handler.py  logger.py  preprocessing.py  similarity_utils.py
